Rename python requirements/lock file

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -100,7 +100,7 @@ commands:
           name: Setup ansible environment
           command: |
             apk add sshpass
-            pip3 install -r requirements.txt
+            pip3 install -r requirements-lock.txt
             ansible-galaxy install -r ansible/requirements.yml
       - run:
           name: Dump node configuration
