Update python deps

--- a/requirements-lock.txt
+++ b/requirements-lock.txt
@@ -1,33 +1,33 @@
-ansible==2.7.0
+ansible==2.10.7
+ansible-base==2.10.7
 ansible-lint==3.5.1
 asn1crypto==0.24.0
-awscli==1.16.158
-bcrypt==3.1.6
+awscli==1.19.45
 boto==2.49.0
-boto3==1.9.148
-botocore==1.12.148
-certifi==2019.3.9
+boto3==1.17.45
+botocore==1.20.45
+certifi==2020.12.5
 cffi==1.10.0
-chardet==3.0.4
-colorama==0.3.9
+chardet==4.0.0
+colorama==0.4.3
 cryptography==2.1.4
 datadog==0.28.0
-decorator==4.4.0
-docutils==0.14
+decorator==5.0.5
+docutils==0.15.2
 envdir==1.0.1
 hvac==0.6.4
 idna==2.7
-Jinja2==2.10.1
-jmespath==0.9.4
+Jinja2==2.11.3
+jmespath==0.10.0
 MarkupSafe==1.1.1
-paramiko==2.4.2
-pyasn1==0.4.5
+packaging==20.9
+pyasn1==0.4.8
 pycparser==2.18
-PyNaCl==1.3.0
-python-dateutil==2.8.0
-PyYAML==5.1
-requests==2.21.0
-rsa==3.4.2
-s3transfer==0.2.0
-six==1.11.0
-urllib3==1.24.3
+pyparsing==2.4.7
+python-dateutil==2.8.1
+PyYAML==5.4.1
+requests==2.25.1
+rsa==4.7.2
+s3transfer==0.3.6
+six==1.12.0
+urllib3==1.26.4
