--- a/ansible/setup.yml
+++ b/ansible/setup.yml
@@ -91,12 +91,12 @@
       pip:
         executable: pip3
         name:
-        - awscli
-        - ansible
-        - boto
-        - boto3
+        - ansible==2.10.7
+        - awscli==1.19.45
+        - boto==2.49.0
+        - boto3==1.17.45
         - datadog==0.28.0
-        - hvac
+        - hvac==0.6.4
       tags:
         - dev-tools
 
