--- a/requirements-lock.txt
+++ b/requirements-lock.txt
@@ -1,19 +1,23 @@
 ansible==2.10.7
 ansible-base==2.10.7
-ansible-lint==3.5.1
+ansible-lint==5.0.11
 asn1crypto==0.24.0
 awscli==1.19.45
 boto==2.49.0
 boto3==1.17.45
 botocore==1.20.45
+bracex==2.1.1
 certifi==2020.12.5
 cffi==1.10.0
 chardet==4.0.0
 colorama==0.4.3
+commonmark==0.9.1
 cryptography==2.1.4
+dataclasses==0.8
 datadog==0.28.0
 decorator==5.0.5
 docutils==0.15.2
+enrich==1.2.6
 envdir==1.0.1
 hvac==0.6.4
 idna==2.7
@@ -23,11 +27,18 @@ MarkupSafe==1.1.1
 packaging==20.9
 pyasn1==0.4.8
 pycparser==2.18
+Pygments==2.9.0
 pyparsing==2.4.7
 python-dateutil==2.8.1
 PyYAML==5.4.1
 requests==2.25.1
+rich==10.2.2
 rsa==4.7.2
+ruamel.yaml==0.17.4
+ruamel.yaml.clib==0.2.2
 s3transfer==0.3.6
 six==1.12.0
+tenacity==7.0.0
+typing-extensions==3.10.0.0
 urllib3==1.26.4
+wcmatch==8.2
